# codex-switch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  backup_current_account.py  check_usage.py  codex_account_manager.py  codex_account_manager_web.py  codex_auth.py  codex_config.py  config_utils.py  start.sh  switch_account.py  usage_checker.py  账号切换逻辑说明.md
assets/: generate_app_icons.py  generate_logo_master.py
codex-tauri-app/: README.md  package.json
codex-tauri-app/src/: index.html  main.js  styles.css
codex-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
codex-tauri-app/src-tauri/icons/: icon.icns
codex-tauri-app/src-tauri/src/: lib.rs
